<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mathquest</string>
    <string name="Start">Startzahl</string>
    <string name="Ziel">Ziel</string>
    <string name="Buttonplus">+</string>
    <string name="Buttonminus">-</string>
    <string name="Buttongeteilt">/</string>
    <string name="Buttonmal">*</string>
    <string name="menu_levelEins">Level 1</string>
    <string name="ausgabe">0</string>
    <string name="Ergebnis">Ergebnis</string>
    <string name="Ergebnisanzeige">0</string>
    <string name="reset">reset</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_eins">EinsActivity</string>
    <string name="title_activity_zwei">ZweiActivity</string>
    <string name="title_activity_drei">DreiActivity</string>
    <string name="menu_levelZwei">Level 2</string>
    <string name="menu_levelDrei">Level 3</string>
    <string name="menu_levelVier">Level 4</string>
    <string name="spielStarten">Spiel starten</string>
    <string name="menu_hauptMenu">Hauptmenü</string>

</resources>
